# smart-car-engine-plus

./: CMakeLists.txt  README.md
actuator_srv/: CMakeLists.txt  main.cpp
car_core/: BusinessRules.cpp  BusinessRules.hpp  CMakeLists.txt  CanReceiver.cpp  CanReceiver.hpp  CoreServer.cpp  CoreServer.hpp  DbLogger.cpp  DbLogger.hpp  Watchdog.cpp  Watchdog.hpp  main.cpp
car_dashboard/: AcPanel.cpp  AcPanel.hpp  CMakeLists.txt  DoorPanel.cpp  DoorPanel.hpp  DtcListWidget.cpp  DtcListWidget.hpp  FaultLamp.cpp  FaultLamp.hpp  MainWindow.cpp  MainWindow.hpp  ShmReader.cpp  ShmReader.hpp  SpeedGauge.cpp  SpeedGauge.hpp  TachGauge.cpp  TachGauge.hpp  TempWidget.cpp  TempWidget.hpp  main.cpp
cmake/: rk3588-toolchain.cmake
common/: CMakeLists.txt  CanFrame.cpp  CanFrame.hpp  CarMsg.hpp  ConfigManager.cpp  ConfigManager.hpp  DtcEngine.cpp  DtcEngine.hpp  Logger.cpp  Logger.hpp  ModuleServer.cpp  ModuleServer.hpp  ShmLayout.hpp
conf/: car_ai.conf  gateway.conf
dbc/: vehicle.dbc
scripts/: build.sh  build_rk3588.sh  deploy_rk3588.sh  start.sh
tests/: CMakeLists.txt  test_can_frame.cpp  test_car_msg.cpp  test_dtc_engine.cpp  test_seqlock.cpp  test_shm_layout.cpp
tools/: CMakeLists.txt  can_sim.cpp  car_ai.cpp  car_ctl.cpp
